mdapi/Custom/objects/Bidding_Statistics__c.object
<CustomObject>
    <description>This is the object that is created by the region to submit their daily bidding statistics.  At the conclusion of the Acquisition Reporting process, data is also written back to the daily BSN record. (JMH 1.2.13)</description>
    <fields>
        <fullName>Active_Homes__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Active Homes</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bid_Homes__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Bid Homes</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Daily_Acq_Report_Complete_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Daily Acq Report Completed By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Bidding_Statistics</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Daily_Acq_Report_Complete_Date__c</fullName>
        <label>Daily Acq Report Completed Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Daily_Asset_Report_Completed_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Daily AM Reporting Completed By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Bidding_Statistics1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Daily_Asset_Report_Completed_Date__c</fullName>
        <label>Daily AM Reporting Completed Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <defaultValue>Today()</defaultValue>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Market__c</fullName>
        <label>Market</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Atlanta</fullName>
                </value>
                <value>
                    <fullName>Charlotte</fullName>
                </value>
                <value>
                    <fullName>Chicago</fullName>
                </value>
                <value>
                    <fullName>Dallas</fullName>
                </value>
                <value>
                    <fullName>Denver</fullName>
                </value>
                <value>
                    <fullName>Houston</fullName>
                </value>
                <value>
                    <fullName>Inland Empire</fullName>
                </value>
                <value>
                    <fullName>Jacksonville</fullName>
                </value>
                <value>
                    <fullName>Las Vegas</fullName>
                </value>
                <value>
                    <fullName>Los Angeles</fullName>
                </value>
                <value>
                    <fullName>Miami</fullName>
                </value>
                <value>
                    <fullName>Minneapolis</fullName>
                </value>
                <value>
                    <fullName>Nashville</fullName>
                </value>
                <value>
                    <fullName>National</fullName>
                </value>
                <value>
                    <fullName>Orlando</fullName>
                </value>
                <value>
                    <fullName>Phoenix</fullName>
                </value>
                <value>
                    <fullName>Sacramento</fullName>
                </value>
                <value>
                    <fullName>Seattle</fullName>
                </value>
                <value>
                    <fullName>Tampa</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>National__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Regional Daily Bidding Stats records will be automatically linked with a corresponding National record each day.</inlineHelpText>
        <label>National</label>
        <referenceTo>Bidding_Statistics__c</referenceTo>
        <relationshipLabel>Bidding Statistics List</relationshipLabel>
        <relationshipName>National_Bidding_Statistics</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Per_Active_Homes__c</fullName>
        <formula>IF( Active_Homes__c &gt; 0,  Total_of_Homes_Won__c / Active_Homes__c , null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>% Active Homes</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Per_Bid_Homes__c</fullName>
        <formula>IF( Bid_Homes__c &gt; 0,  Total_of_Homes_Won__c / Bid_Homes__c , null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>% Bid Homes</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Per_Sold_to_3rd_Parties_Homes__c</fullName>
        <formula>IF( Sold_to_3rd_Parties_Homes__c &gt; 0,  Total_of_Homes_Won__c /  Sold_to_3rd_Parties_Homes__c , null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>% Sold to 3rd Parties Homes</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Per_Underwritten_Homes__c</fullName>
        <formula>IF( Underwritten_Homes__c &gt; 0,  Total_of_Homes_Won__c /  Underwritten_Homes__c , null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>% Underwritten Homes</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>RAM_Reporting_Completed__c</fullName>
        <formula>IF(AND(NOT(ISNULL(Daily_Acq_Report_Complete_By__c )), NOT(ISNULL( Daily_Acq_Report_Complete_Date__c ))), &apos;YES&apos;, &apos;NO&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>RAM Reporting Completed?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Market2</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Atlanta</fullName>
                </value>
                <value>
                    <fullName>Charlotte</fullName>
                </value>
                <value>
                    <fullName>Chicago</fullName>
                </value>
                <value>
                    <fullName>Dallas</fullName>
                </value>
                <value>
                    <fullName>Denver</fullName>
                </value>
                <value>
                    <fullName>Houston</fullName>
                </value>
                <value>
                    <fullName>Inland Empire</fullName>
                </value>
                <value>
                    <fullName>Jacksonville</fullName>
                </value>
                <value>
                    <fullName>Las Vegas</fullName>
                </value>
                <value>
                    <fullName>Los Angeles</fullName>
                </value>
                <value>
                    <fullName>Miami</fullName>
                </value>
                <value>
                    <fullName>Minneapolis</fullName>
                </value>
                <value>
                    <fullName>Nashville</fullName>
                </value>
                <value>
                    <fullName>Orlando</fullName>
                </value>
                <value>
                    <fullName>Phoenix</fullName>
                </value>
                <value>
                    <fullName>Sacramento</fullName>
                </value>
                <value>
                    <fullName>Seattle</fullName>
                </value>
                <value>
                    <fullName>Tampa</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sold_to_3rd_Parties_Homes__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Sold to 3rd Parties Homes</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <formula>IF(
	AND(ISBLANK( Daily_Acq_Report_Complete_By__c ), ISNULL(Daily_Acq_Report_Complete_Date__c )),
	&apos;Waiting for Acquisition Manager Approval&apos;,
	IF(
		AND(ISBLANK( Daily_Asset_Report_Completed_By__c ), ISNULL(Daily_Asset_Report_Completed_Date__c )),
		&apos;Waiting for Asset Manager Approval&apos;,
		&apos;Completed&apos;
	)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_of_Homes_Won__c</fullName>
        <label>Total # of Homes Won</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Underwritten_Homes__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Underwritten Homes</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Bidding Statistics</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Region__c</columns>
        <columns>Date__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Active_Homes__c</columns>
        <columns>Underwritten_Homes__c</columns>
        <columns>Sold_to_3rd_Parties_Homes__c</columns>
        <columns>Bid_Homes__c</columns>
        <columns>Total_of_Homes_Won__c</columns>
        <columns>Status__c</columns>
        <columns>Daily_Acq_Report_Complete_By__c</columns>
        <columns>Daily_Acq_Report_Complete_Date__c</columns>
        <columns>Daily_Asset_Report_Completed_By__c</columns>
        <columns>Daily_Asset_Report_Completed_Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Atlanta_Bid_Stats</fullName>
        <columns>NAME</columns>
        <columns>Date__c</columns>
        <columns>Active_Homes__c</columns>
        <columns>Underwritten_Homes__c</columns>
        <columns>Bid_Homes__c</columns>
        <columns>Sold_to_3rd_Parties_Homes__c</columns>
        <columns>Total_of_Homes_Won__c</columns>
        <columns>Per_Active_Homes__c</columns>
        <columns>Per_Underwritten_Homes__c</columns>
        <columns>Per_Bid_Homes__c</columns>
        <columns>Per_Sold_to_3rd_Parties_Homes__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Region__c</field>
            <operation>equals</operation>
            <value>Atlanta</value>
        </filters>
        <label>Atlanta Bid Stats</label>
        <sharedTo>
            <group>Invitation_Corporate_Wide_Executive</group>
            <group>Region_Atlanta</group>
            <role>Executive</role>
            <role>Executive_Atlanta</role>
            <role>Team_Member_Atlanta</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Charlotte_Bid_Stats</fullName>
        <columns>NAME</columns>
        <columns>Date__c</columns>
        <columns>Active_Homes__c</columns>
        <columns>Underwritten_Homes__c</columns>
        <columns>Bid_Homes__c</columns>
        <columns>Sold_to_3rd_Parties_Homes__c</columns>
        <columns>Total_of_Homes_Won__c</columns>
        <columns>Per_Active_Homes__c</columns>
        <columns>Per_Underwritten_Homes__c</columns>
        <columns>Per_Bid_Homes__c</columns>
        <columns>Per_Sold_to_3rd_Parties_Homes__c</columns>
        <columns>Daily_Acq_Report_Complete_By__c</columns>
        <columns>Daily_Asset_Report_Completed_By__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Region__c</field>
            <operation>equals</operation>
            <value>Charlotte</value>
        </filters>
        <label>Charlotte Bid Stats</label>
        <sharedTo>
            <group>Invitation_Corporate_Wide_Executive</group>
            <role>Executive</role>
            <role>Executive_Charlotte</role>
            <role>Team_Member_Charlotte</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Chicago_Bid_Stats</fullName>
        <columns>NAME</columns>
        <columns>Date__c</columns>
        <columns>Active_Homes__c</columns>
        <columns>Underwritten_Homes__c</columns>
        <columns>Bid_Homes__c</columns>
        <columns>Sold_to_3rd_Parties_Homes__c</columns>
        <columns>Total_of_Homes_Won__c</columns>
        <columns>Per_Active_Homes__c</columns>
        <columns>Per_Underwritten_Homes__c</columns>
        <columns>Per_Bid_Homes__c</columns>
        <columns>Per_Sold_to_3rd_Parties_Homes__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Region__c</field>
            <operation>equals</operation>
            <value>Chicago</value>
        </filters>
        <label>Chicago Bid Stats</label>
        <sharedTo>
            <group>Invitation_Corporate_Wide_Executive</group>
            <role>Executive</role>
            <role>Executive_Chicago</role>
            <role>Team_Member_Chicago</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Completed_Bid_Stats</fullName>
        <columns>NAME</columns>
        <columns>Region__c</columns>
        <columns>Date__c</columns>
        <columns>Active_Homes__c</columns>
        <columns>Underwritten_Homes__c</columns>
        <columns>Sold_to_3rd_Parties_Homes__c</columns>
        <columns>Bid_Homes__c</columns>
        <columns>Total_of_Homes_Won__c</columns>
        <columns>Status__c</columns>
        <columns>Daily_Acq_Report_Complete_By__c</columns>
        <columns>Daily_Acq_Report_Complete_Date__c</columns>
        <columns>Daily_Asset_Report_Completed_By__c</columns>
        <columns>Daily_Asset_Report_Completed_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Completed</value>
        </filters>
        <label>Completed Bid Stats</label>
        <sharedTo>
            <group>System_Admins</group>
            <role>Executive</role>
            <role>Executive_Atlanta</role>
            <role>Executive_Charlotte</role>
            <role>Executive_Chicago</role>
            <role>Executive_Inland_Empire</role>
            <role>Executive_Jacksonville</role>
            <role>Executive_LA_County</role>
            <role>Executive_Las_Vegas</role>
            <role>Executive_Miami</role>
            <role>Executive_Orlando</role>
            <role>Executive_Phoenix</role>
            <role>Executive_Sacramento</role>
            <role>Executive_Seattle</role>
            <role>Executive_Southern_California</role>
            <role>Executive_Tampa</role>
            <role>Team_Member_Atlanta</role>
            <role>Team_Member_California</role>
            <role>Team_Member_Charlotte</role>
            <role>Team_Member_Chicago</role>
            <role>Team_Member_Inland_Empire</role>
            <role>Team_Member_Jacksonville</role>
            <role>Team_Member_LA_County</role>
            <role>Team_Member_Las_Vegas</role>
            <role>Team_Member_Miami</role>
            <role>Team_Member_Orlando</role>
            <role>Team_Member_Phoenix</role>
            <role>Team_Member_Sacramento</role>
            <role>Team_Member_Seattle</role>
            <role>Team_Member_Tampa</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Greater_Todays_Bidding_Statistics</fullName>
        <columns>NAME</columns>
        <columns>Region__c</columns>
        <columns>Date__c</columns>
        <columns>National__c</columns>
        <columns>Status__c</columns>
        <columns>RAM_Reporting_Completed__c</columns>
        <columns>Daily_Acq_Report_Complete_By__c</columns>
        <columns>Daily_Acq_Report_Complete_Date__c</columns>
        <columns>Daily_Asset_Report_Completed_By__c</columns>
        <columns>Daily_Asset_Report_Completed_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Date__c</field>
            <operation>greaterThan</operation>
            <value>TODAY</value>
        </filters>
        <label>&gt; Today&apos;s Bidding Statistics</label>
    </listViews>
    <listViews>
        <fullName>Inland_Empire_Bid_Stats</fullName>
        <columns>NAME</columns>
        <columns>Date__c</columns>
        <columns>Active_Homes__c</columns>
        <columns>Underwritten_Homes__c</columns>
        <columns>Bid_Homes__c</columns>
        <columns>Sold_to_3rd_Parties_Homes__c</columns>
        <columns>Total_of_Homes_Won__c</columns>
        <columns>Per_Active_Homes__c</columns>
        <columns>Per_Underwritten_Homes__c</columns>
        <columns>Per_Bid_Homes__c</columns>
        <columns>Per_Sold_to_3rd_Parties_Homes__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Region__c</field>
            <operation>equals</operation>
            <value>Inland Empire</value>
        </filters>
        <label>Inland Empire Bid Stats</label>
        <sharedTo>
            <group>Invitation_Corporate_Wide_Executive</group>
            <role>Executive</role>
            <role>Executive_Inland_Empire</role>
            <role>Team_Member_Inland_Empire</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Jacksonville_Bid_Stats</fullName>
        <columns>NAME</columns>
        <columns>Date__c</columns>
        <columns>Active_Homes__c</columns>
        <columns>Underwritten_Homes__c</columns>
        <columns>Bid_Homes__c</columns>
        <columns>Sold_to_3rd_Parties_Homes__c</columns>
        <columns>Total_of_Homes_Won__c</columns>
        <columns>Per_Active_Homes__c</columns>
        <columns>Per_Underwritten_Homes__c</columns>
        <columns>Per_Bid_Homes__c</columns>
        <columns>Per_Sold_to_3rd_Parties_Homes__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Region__c</field>
            <operation>equals</operation>
            <value>Jacksonville</value>
        </filters>
        <label>Jacksonville Bid Stats</label>
        <sharedTo>
            <group>Invitation_Corporate_Wide_Executive</group>
            <role>Executive</role>
            <role>Executive_Jacksonville</role>
            <role>Team_Member_Jacksonville</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Las_Vegas_Bid_Stats</fullName>
        <columns>NAME</columns>
        <columns>Date__c</columns>
        <columns>Active_Homes__c</columns>
        <columns>Underwritten_Homes__c</columns>
        <columns>Bid_Homes__c</columns>
        <columns>Sold_to_3rd_Parties_Homes__c</columns>
        <columns>Total_of_Homes_Won__c</columns>
        <columns>Per_Active_Homes__c</columns>
        <columns>Per_Underwritten_Homes__c</columns>
        <columns>Per_Bid_Homes__c</columns>
        <columns>Per_Sold_to_3rd_Parties_Homes__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Region__c</field>
            <operation>equals</operation>
            <value>Las Vegas</value>
        </filters>
        <label>Las Vegas Bid Stats</label>
        <sharedTo>
            <group>Invitation_Corporate_Wide_Executive</group>
            <role>Executive</role>
            <role>Executive_Las_Vegas</role>
            <role>Team_Member_Las_Vegas</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Los_Angeles_Bid_Stats</fullName>
        <columns>NAME</columns>
        <columns>Date__c</columns>
        <columns>Active_Homes__c</columns>
        <columns>Underwritten_Homes__c</columns>
        <columns>Bid_Homes__c</columns>
        <columns>Sold_to_3rd_Parties_Homes__c</columns>
        <columns>Total_of_Homes_Won__c</columns>
        <columns>Per_Active_Homes__c</columns>
        <columns>Per_Underwritten_Homes__c</columns>
        <columns>Per_Bid_Homes__c</columns>
        <columns>Per_Sold_to_3rd_Parties_Homes__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Region__c</field>
            <operation>equals</operation>
            <value>Los Angeles</value>
        </filters>
        <label>Los Angeles Bid Stats</label>
        <sharedTo>
            <group>Invitation_Corporate_Wide_Executive</group>
            <role>Executive</role>
            <role>Executive_LA_County</role>
            <role>Team_Member_LA_County</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Miami_Bid_Stats</fullName>
        <columns>NAME</columns>
        <columns>Date__c</columns>
        <columns>Active_Homes__c</columns>
        <columns>Underwritten_Homes__c</columns>
        <columns>Bid_Homes__c</columns>
        <columns>Sold_to_3rd_Parties_Homes__c</columns>
        <columns>Total_of_Homes_Won__c</columns>
        <columns>Per_Active_Homes__c</columns>
        <columns>Per_Underwritten_Homes__c</columns>
        <columns>Per_Bid_Homes__c</columns>
        <columns>Per_Sold_to_3rd_Parties_Homes__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Region__c</field>
            <operation>equals</operation>
            <value>Miami</value>
        </filters>
        <label>Miami Bid Stats</label>
        <sharedTo>
            <group>Invitation_Corporate_Wide_Executive</group>
            <role>Executive</role>
            <role>Executive_Miami</role>
            <role>Team_Member_Miami</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>National</fullName>
        <columns>NAME</columns>
        <columns>Region__c</columns>
        <columns>Date__c</columns>
        <columns>Status__c</columns>
        <columns>Daily_Acq_Report_Complete_By__c</columns>
        <columns>Daily_Acq_Report_Complete_Date__c</columns>
        <columns>Daily_Asset_Report_Completed_By__c</columns>
        <columns>Daily_Asset_Report_Completed_Date__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Region__c</field>
            <operation>equals</operation>
            <value>National</value>
        </filters>
        <label>National</label>
    </listViews>
    <listViews>
        <fullName>Open_Bidding_Statistics</fullName>
        <columns>NAME</columns>
        <columns>Region__c</columns>
        <columns>Date__c</columns>
        <columns>Status__c</columns>
        <columns>Daily_Acq_Report_Complete_By__c</columns>
        <columns>Daily_Acq_Report_Complete_Date__c</columns>
        <columns>Daily_Asset_Report_Completed_By__c</columns>
        <columns>Daily_Asset_Report_Completed_Date__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>National__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Completed</value>
        </filters>
        <filters>
            <field>Region__c</field>
            <operation>notEqual</operation>
            <value>National</value>
        </filters>
        <label>Open Bidding Statistics</label>
    </listViews>
    <listViews>
        <fullName>Orlando_Bid_Stats</fullName>
        <columns>NAME</columns>
        <columns>Date__c</columns>
        <columns>Active_Homes__c</columns>
        <columns>Underwritten_Homes__c</columns>
        <columns>Bid_Homes__c</columns>
        <columns>Sold_to_3rd_Parties_Homes__c</columns>
        <columns>Total_of_Homes_Won__c</columns>
        <columns>Per_Active_Homes__c</columns>
        <columns>Per_Underwritten_Homes__c</columns>
        <columns>Per_Bid_Homes__c</columns>
        <columns>Per_Sold_to_3rd_Parties_Homes__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Region__c</field>
            <operation>equals</operation>
            <value>Orlando</value>
        </filters>
        <label>Orlando Bid Stats</label>
        <sharedTo>
            <group>Invitation_Corporate_Wide_Executive</group>
            <role>Executive</role>
            <role>Executive_Orlando</role>
            <role>Team_Member_Orlando</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Phoenix_Bid_Stats</fullName>
        <columns>NAME</columns>
        <columns>Date__c</columns>
        <columns>Active_Homes__c</columns>
        <columns>Underwritten_Homes__c</columns>
        <columns>Bid_Homes__c</columns>
        <columns>Sold_to_3rd_Parties_Homes__c</columns>
        <columns>Total_of_Homes_Won__c</columns>
        <columns>Per_Active_Homes__c</columns>
        <columns>Per_Underwritten_Homes__c</columns>
        <columns>Per_Bid_Homes__c</columns>
        <columns>Per_Sold_to_3rd_Parties_Homes__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Region__c</field>
            <operation>equals</operation>
            <value>Phoenix</value>
        </filters>
        <label>Phoenix Bid Stats</label>
        <sharedTo>
            <group>Invitation_Corporate_Wide_Executive</group>
            <role>Executive</role>
            <role>Executive_Phoenix</role>
            <role>Team_Member_Phoenix</role>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>BSN-{0000000}</displayFormat>
        <label>Bidding Statistics Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Bidding Statistics</pluralLabel>
    <recordTypes>
        <fullName>Completed_Bid_Stat</fullName>
        <active>true</active>
        <label>Completed Bid Stat</label>
    </recordTypes>
    <recordTypes>
        <fullName>Open_Bid_Stat</fullName>
        <active>true</active>
        <label>Open Bid Stat</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>